welcome.lessons.welcome.loopwhile.LoopWhile.scala.error
Program:1: error: '(' expected but identifier found.
while !(estFaceMur()) {
      ^Program:5: error: illegal start of simple expression
	}
        ^